@@ -1,3 +1,8 @@
+2007-02-26  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/device.py (FC3_Device):  Fix device command
+	syntax to match anaconda's documentation.
+
 2007-02-21  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  New version.
